--- a/Solo Run.html
+++ b/Solo Run.html
@@ -29,7 +29,7 @@
     <a href="Bicycle kick.html">Bicycle Kick</a>
     <a href="Free Kick.html" >Free Kick</a>
     <a href="Long Shot.html">Long Shot</a>
-    <a href="Solo Run.html"  class="active">Long Shot</a>
+    <a href="Solo Run.html"  class="active">Solo Run</a>
     <a href="Others.html">Others</a>
 </nav>
 
