--- a/Free Kick.html
+++ b/Free Kick.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-16B4C3B9MX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-16B4C3B9MX');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Free Kicks</title>
@@ -24,7 +33,7 @@
     <a href="Bicycle kick.html">Bicycle Kick</a>
     <a href="Free Kick.html" class="active" >Free Kick</a>
     <a href="Long Shot.html" >Long Shot</a>
-    <a href="Solo Run.html" >Long Shot</a>
+    <a href="Solo Run.html" >Solo Run</a>
     <a href="Others.html">Others</a>
 </nav>
 
