--- a/Categories.html
+++ b/Categories.html
@@ -37,7 +37,7 @@
 
 <div class="categories-list">
     <div class="category-item">
-        <h3><a href="Bicycle Kick.html"> Bicycle Kick</a></h3>
+        <h3><a href="Bicycle kick.html"> Bicycle Kick</a></h3>
         <p>High-flying goals that showcase incredible acrobatics.</p>
     </div>
     <div class="category-item">
