--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A website to find FC highlights"> 
     <title>Crazy Football Goals - FC Mobile</title>
     <style>
         body {
